tests/NormalTests/paczka1/fuzzy1/15428231.err
Error in line 4: DFIR5Bg A520 83,5
Error in line 7: mmXeeCi A523 40,8
Error in line 8: mvbCwm A523 64,6
Error in line 11: DFIR5Bg A523 84,2
Error in line 21: DFIR5Bg A520 71,8
Error in line 23: mmXeeCi A543 52,4
Error in line 22: DFIR5Bg S299 33,5
Error in line 36: cqMmR A523 18,4
Error in line 37: cqMmR S299 0,8
Error in line 39: cqMmR A520 74,1
